--- a/scripts/conf/glpi/glpi1.conf
+++ b/scripts/conf/glpi/glpi1.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/12/2021
-# Data de atualização: 10/12/2021
-# Versão: 0.01
+# Data de atualização: 14/12/2021
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x e GLPI Help Desk v9.5.x
 
@@ -30,7 +30,7 @@
 	# Configuração das permissões do diretório raiz do GLPI Help Desk
 	<Directory /var/www/html/glpi>
 		Options FollowSymLinks
-		AllowOverride None
+		AllowOverride All
 		Order allow,deny
 		allow from all
 	</Directory>
