--- a/scripts/conf/guacamole/guacamole.properties
+++ b/scripts/conf/guacamole/guacamole.properties
@@ -1,4 +1,24 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 03/12/2021
+# Data de atualização: 09/12/2021
+# Versão: 0.3
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Apache Guacamole Server 1.3.x e Cliente 1.3.x
+
+# Configuração do Hostname do Guacamole Server
 guacd-hostname: localhost
+#
+# Configuração da Porta de Acesso ao Guacamole Server
 guacd-port: 4822
+#
+# Configuração do Protocolo de Autenticação Básica do Guacamole Server
 auth-provider: net.sourceforge.guacamole.net.basic.BasicFileAuthenticationProvider
+#
+# Localização do arquivo de Configuração do Usuário e Acesso Remoto do Guacamole Server
 user-mapping: /etc/guacamole/user-mapping.xml
